# ResumeGPT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: publish-to-pypi.yaml
config/: README.md  config.ini  config.py
data/: example_resume.yaml  sample_resume.yaml
models/: README.md  __init__.py  job_post.py  resume.py
pdf_generation/: __init__.py  resume_pdf_generator.py  resume_pdf_styles.py
prompts/: README.md  __init__.py  extractor_descriptions.yaml  prompts.py  prompts.yaml
services/: README.md  __init__.py  background_runner.py  bullet_points_processor.py  extractor.py  langchain_helpers.py  resume_improver.py
tests/: README.md  test_config.py  test_models.py  test_pdf_generation.py  test_prompts.py  test_services.py  test_utils.py
tests/test_data/: example_job.mhtml  example_job_posting.html
utils/: README.md  __init__.py  file_handler.py  misc.py  pdf_generator.py  resume_format_checker.py  yaml_handler.py
